Updated FuzzyDate classes